added minified version of angularjs service file

--- a/ENCRYPTION_DEMO/ENCRYPTION_DEMO/index.html
+++ b/ENCRYPTION_DEMO/ENCRYPTION_DEMO/index.html
@@ -15,13 +15,14 @@
     <script src="angular.min.js"></script>
 
     <!--RSA Encryption Dependencies-->
-    <script src="RSA_MODULE.js"></script>
+    <!--<script src="RSA_MODULE.js"></script>-->
     <!--RSA Encryption Dependencies-->
     <!--AES Encryption Dependencies-->
-    <script src="AES_MODULE.js"></script>
+    <!--<script src="AES_MODULE.js"></script>-->
     <!--AES Encryption Dependencies-->
+    <!--<script src="NETWORK.js"></script>-->
 
-    <script src="NETWORK.js"></script>
+    <script src="network.min.js"></script>
 
     <script src="app.js"></script>
 
